FHG-4538 Update terms and conditions

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
@@ -13,52 +13,142 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">Terms and conditions</h1>
 
-        <p>Welcome to Manage family support services and accounts. This service is run by the Department for Education (DfE).</p>
-        <p>These terms and conditions apply to local authority and voluntary and community sector (VCS) professionals who are signed in and using the service to add and manage:</p>
-
+        <p>Welcome to Connect families to support and Manage family support services and accounts (our services). Our services are run by the Department for Education and their use is subject to these terms and conditions.</p>
+        <h2 class="govuk-heading-m">Overview</h2>
+        <p>Our services are for local authority and voluntary and community sector (VCS) professionals who work with and provide support to families.</p>
+        <p>Connect families to support allows professionals who work with families to:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>search for and connect families to the support they need</li>
+            <li>view, manage and respond to requests for support</li>
+        </ul>
+        <p>Manage family support services and accounts allow professionals who work with families to add and manage:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>user accounts</li>
             <li>local authority services</li>
             <li>family hubs</li>
             <li>VCS organisations</li>
         </ul>
-
+        <h2 class="govuk-heading-m">Scope of licence</h2>
+        <p>By accepting these terms and conditions, we give you non-exclusive, non-transferable permission to use our services. You can only use our services to connect families to support on behalf of your organisation.</p>
+        <p>We do not sell our services to you, and we remain the owners of our services at all times. We only provide you with access to our services for internal use by your organisation. You agree not to use our services for any re-sale purposes.</p>
         <h2 class="govuk-heading-m">Your responsibilities</h2>
-        <p>By using Manage family support services and accounts, you agree to the following terms and conditions:</p>
+        <p>By using our services, you agree to the following terms and conditions:</p>
         <ol class="govuk-list govuk-list--number">
-            <li>You must comply with the Data Protection Act 2018, complete your organisation’s data protection training and follow your organisation’s data protection policy.</li>
-            <li>You must comply with any standards of behaviour expected by your employer.</li>
+            <li>You must not use our services for any unlawful purposes.</li>
+            <li>You must provide us with accurate and up to date information and tell us and your organisation as soon as possible  if you become aware that information you’ve shared is inaccurate or needs to be corrected or updated.</li>
+            <li>You must comply with any standards of behaviour expected by your organisation and expected of someone providing professional services in your role.</li>
             <li>You must lock your computer screen when you leave your desk.</li>
-            <li>Your employer may restrict access for lawful purposes and set their own acceptable use policies - contact your employer for more information.</li>
-            <li>You must not use this service for any unlawful purposes.</li>
+            <li>Your organisation may restrict access for lawful purposes and set their own acceptable use policies. Contact your organisation for more information.</li>
             <li>You must not share your account details with anyone, and you must keep your account details confidential and secure.</li>
-            <li>You must not set up or request an account for a shared email address (for example, team@vcs-support.co.uk).</li>
+            <li>You must only use our services in a way that does not infringe the rights of, or restrict, or inhibit the use and enjoyment of our services by anyone else.</li>
+            <li>You must not do or fail to do anything that could bring us or the government into disrepute or otherwise harm our or its reputation.</li>
             <li>You accept responsibility for all activities associated with your account.</li>
-            <li>You must contact us as soon as you become aware of any security breach.</li>
-            <li>You agree to indemnify the DfE against any losses, expenses, damages or claims we may incur as a result of any failure by you to comply with the obligations set out in these terms.</li>
+            <li>You agree to indemnify us against any losses, expenses, damages or claims we may incur as a result of any failure by you to comply with the obligations set out in these terms and conditions.</li>
         </ol>
-
-        <p>Your rights to use this service may be removed, or amended, if you are found to be in breach of these terms and conditions. Our decision in the event of a breach shall be final.</p>
-
         <h2 class="govuk-heading-m">Our responsibilities</h2>
-        <p>The DfE will not view or edit any request information unless it is specifically required for safeguarding or legal purposes. </p>
-
-        <p>This service complies with the <a href="https://www.legislation.gov.uk/ukpga/2018/12/contents/enacted?McasCtx=4&amp;McasTsid=20892">UK Data Protection Act 2018</a> and we endeavour to ensure that the service is continuously available. However, the DfE accepts no liability for:</p>
+        <p>Our services comply with all applicable data protection laws, and we try to ensure that our services are continuously available. However, we accept no liability for:</p>
         <ul class="govuk-list govuk-list--bullet">
-            <li>you being unable to access the service (for example owing to excessive demand or because we've taken the service down for maintenance) </li>
+            <li>you being unable to access the service (for example owing to excessive demand or because we've taken the service down for maintenance)</li>
             <li>delay or failure in receiving data </li>
             <li>loss or damage arising from the use of the service or reliance on its content </li>
             <li>the content and availability of external websites that link to the service or which are linked from it</li>
         </ul>
-
-        <p>The DfE is not responsible for the content of other websites linked to from Manage family support services and accounts.</p>
-
+        <h2 class="govuk-heading-m">Data protection</h2>
+        <p>
+            You must comply with all applicable data protection laws, including the <a href="https://www.legislation.gov.uk/ukpga/2018/12/contents/enacted?McasCtx=4&amp;McasTsid=20892">Data Protection Act 2018</a> and the UK GDPR as defined by section 2 of The Data Protection, Privacy and Electronic Communications (Amendments etc) (EU Exit) Regulations 2019, and any regulatory guidance.
+        </p><p>You understand that:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>your organisation may act as point of contact for people whose data is being processed</li>
+            <li>you (on your organisation’s behalf) are responsible for following data protection laws when it comes to people exercising their rights regarding their personal data</li>
+        </ul>
+        <p>You must regularly complete your organisation’s data protection training and follow their data protection policy on an ongoing basis.</p>
+        <p>You must let us know as soon as you become aware of any security breach by emailing:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>Connect families to support at <a href="mailto:connect-family-support.service@education.gov.uk">connect-family-support.service@education.gov.uk</a></li>
+            <li>Manage family support services and accounts at <a href="mailto:manage-family-support.service@education.gov.uk">manage-family-support.service@education.gov.uk</a></li>
+        </ul>
+        <p>We collect information about you in accordance with the:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li><a href="@Model.ConnectPrivacyNoticeUrl">Connect families to support privacy notice</a></li>
+            <li><a href="/privacy"> Manage family support services and accounts privacy notice</a></li>
+        </ul>
+        <h2 class="govuk-heading-m">Intellectual property rights</h2>
+        <p>You acknowledge that:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>all intellectual property rights in our services belong to us</li>
+            <li>rights in our services are licensed (not sold) to you</li>
+            <li>you have no rights in, or to our services other than the right to use them in accordance with these terms and conditions</li>
+        </ul>
+        <h2 class="govuk-heading-m">Virus protection</h2>
+        <p>We make every effort to check and test our services for viruses at every stage of production. You must make sure that the way you use our services does not expose you to the risk of viruses, malicious computer code or other forms of interference which can damage your computer system.</p>
+        <p>We’re not responsible for any loss, disruption or damage to your data or computer system that might happen when you use our services.</p>
+        <h2 class="govuk-heading-m">Disclaimer</h2>
+        <p>While we make every effort to keep our services up to date, we do not provide any guarantees, conditions or warranties that our services or their content  will be:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>current</li>
+            <li>secure</li>
+            <li>accurate</li>
+            <li>complete</li>
+            <li>free from bugs or viruses</li>
+        </ul>
+        <p>We are not liable for any loss of damage that may come from using our services. This includes:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>any direct, indirect or consequential losses</li>
+            <li>any loss or damage caused by civil wrongs (‘tort’, including negligence), breach of contract or otherwise</li>
+            <li>the use of our services</li>
+            <li>the inability to use our services</li>
+        </ul>
+        <p>This applies if the loss or damage was foreseeable, arose in the normal course of things or if you advised us that it might happen.</p>
+        <p>This includes (but is not limited to) the loss of your or your organisation’s:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>income or revenue</li>
+            <li>salary, benefits or other payments</li>
+            <li>business</li>
+            <li>profits or contracts</li>
+            <li>opportunity</li>
+            <li>anticipated savings</li>
+            <li>data</li>
+            <li>goodwill or reputation</li>
+            <li>tangible property</li>
+            <li>intangible property, including loss, corruption or damage to data or any computer system</li>
+            <li>wasted management or office time</li>
+        </ul>
+        <p>We may still be liable for:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>death or personal injury arising from our negligence</li>
+            <li>fraudulent misrepresentation</li>
+            <li>any other liability which cannot be excluded or limited under applicable law</li>
+        </ul>
+        <h2 class="govuk-heading-m">Virus protection</h2>
+        <p>
+            We may end these terms and conditions at any time without warning or reason.
+        </p><p>Your rights to use our services may be removed or amended if you are found to be in breach of these terms and conditions. Our decision in the event of a breach will be final.</p>
+        <p>Unless we agree otherwise, these terms and conditions will end when the Grant Agreement between us and your organisation ends.</p>
+        <p>When the agreement ends, you lose the rights we gave you under these terms and conditions.</p>
+        <p>The following sections will still apply after the agreement ends:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>Data protection</li>
+            <li>Intellectual property rights</li>
+            <li>Disclaimer</li>
+            <li>General</li>
+            <li>Governing law</li>
+        </ul>
+        <h2 class="govuk-heading-m">General</h2>
+        <p>We’re not liable if we fail to comply with these terms and conditions because of circumstances beyond our reasonable control.</p>
+        <p>We might decide not to exercise or enforce any right available to us under these terms and conditions. Doing this once will not mean we automatically waive the right on any other occasion. We can always decide to exercise or enforce that right at a later date.</p>
+        <p>We may transfer our rights and obligations under these terms and conditions to another government body, but this will not affect your rights or our obligations under them. You may not transfer your rights or your obligations under these terms and conditions to another person unless we agree in writing.</p>
+        <p>If any of part of these terms and conditions are held to be invalid, unenforceable, or illegal for any reason, the remaining terms and conditions will still apply.</p>
+        <p>In the event of a conflict between these terms and conditions and any other terms, including terms and conditions on the GOV.UK website, these terms and conditions will take priority.</p>
+        <h2 class="govuk-heading-m">Governing law</h2>
+        <p>These terms and conditions are governed by and construed in accordance with the laws of England and Wales.</p>
+        <p>Any dispute you have which relates to these terms and conditions, or your use of our services (whether of a contractual or non-contractual nature), will be subject to the exclusive jurisdiction of the courts of England and Wales.</p>
         <h2 class="govuk-heading-m">Changes to these terms and conditions</h2>
-        <p>The DfE can change these terms and conditions at any time. We’ll tell you about any changes by email at least 10 days before the change happens. We will specify the date that the change will happen in the message.</p>
-        <p>If you continue to use our service once the terms and conditions are updated, you agree to any of the changes we’ve made.</p>
-        <p>If you do not accept the change, you must stop using Manage family support services and accounts.</p>
-        <p>You can make a complaint or give feedback about this service by emailing <a href="mailto:manage-connection-requests.service@education.gov.uk">manage-connection-requests.service@education.gov.uk</a>.</p>
-
-        <p>Last updated: 14 August 2023.</p>
+        <p>We can change these terms and conditions at any time. If you continue to use our services once these terms and conditions are updated, you agree to any of the changes we’ve made. If you do not accept the change, you must stop using our services.</p>
+        <p>You can make a complaint or give feedback about this service by emailing:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>Connect families to support at <a href="mailto:connect-family-support.service@education.gov.uk">connect-family-support.service@education.gov.uk</a></li>
+            <li>Manage family support services and accounts at <a href="mailto:manage-family-support.service@education.gov.uk">manage-family-support.service@education.gov.uk</a></li>
+        </ul>
+        <p>Last updated 20 August 2023.</p>
     </div>
 </div>
