use email value from config

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
@@ -65,7 +65,7 @@
         <p>You must let us know as soon as you become aware of any security breach by emailing:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>Connect families to support at <a href="mailto:connect-family-support.service@education.gov.uk">connect-family-support.service@education.gov.uk</a></li>
-            <li>Manage family support services and accounts at <a href="mailto:manage-family-support.service@education.gov.uk">manage-family-support.service@education.gov.uk</a></li>
+            <li>Manage family support services and accounts at <a href="mailto:@Model.SupportEmail">@Model.SupportEmail</a></li>
         </ul>
         <p>We collect information about you in accordance with the:</p>
         <ul class="govuk-list govuk-list--bullet">
@@ -147,7 +147,7 @@
         <p>You can make a complaint or give feedback about this service by emailing:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>Connect families to support at <a href="mailto:connect-family-support.service@education.gov.uk">connect-family-support.service@education.gov.uk</a></li>
-            <li>Manage family support services and accounts at <a href="mailto:manage-family-support.service@education.gov.uk">manage-family-support.service@education.gov.uk</a></li>
+            <li>Manage family support services and accounts at <a href="mailto:@Model.SupportEmail">@Model.SupportEmail</a></li>
         </ul>
         <p>Last updated 20 August 2023.</p>
     </div>
