use new-tab shared component

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Accessibility.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Accessibility.cshtml
@@ -22,7 +22,7 @@
             <li>listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)</li>
         </ul>
         <p>We've also made the website text as simple as possible to understand.</p>
-        <p><a href="https://mcmw.abilitynet.org.uk/" target="_blank">AbilityNet (opens in a new tab)</a> has advice on making your device easier to use if you have a disability.</p>
+        <p><a href="https://mcmw.abilitynet.org.uk/" new-tab>AbilityNet</a> has advice on making your device easier to use if you have a disability.</p>
         <h2 class="govuk-heading-m">How accessible this website is</h2>
         <p>
             We know some parts of this website are not fully accessible. For example:
@@ -37,7 +37,7 @@
         <h2 class="govuk-heading-m">Reporting accessibility problems with this website</h2>
         <p>We're always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we're not meeting accessibility requirements, email the details to <a href="mailto:@Model.SupportEmail">@Model.SupportEmail</a>.</p>
         <h2 class="govuk-heading-m">Enforcement procedure</h2>
-        <p>The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the 'accessibility regulations'). If you're not happy with how we respond to your complaint, <a href="https://www.equalityadvisoryservice.com/" target="_blank">contact the Equality Advisory and Support Service (opens in a new tab)</a>.</p>
+        <p>The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the 'accessibility regulations'). If you're not happy with how we respond to your complaint, <a href="https://www.equalityadvisoryservice.com/" new-tab>contact the Equality Advisory and Support Service</a>.</p>
         <h2 class="govuk-heading-m">Technical information about this website's accessibility</h2>
         <p>The Department for Education is committed to making its websites accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.</p>
         <h2 class="govuk-heading-m">Compliance status</h2>
