--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/_ViewImports.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@namespace FamilyHubs.ServiceDirectory.Admin.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, FamilyHubs.SharedKernel.Razor
