--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Accessibility.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Accessibility.cshtml
@@ -14,7 +14,7 @@
         <h1 class="govuk-heading-l" data-testid="accessibility-heading">Accessibility Statement</h1>
 
         <p>
-            This accessibility statement applies to Connect families to support.
+            This accessibility statement applies to Manage family support services and accounts.
         </p>
         <p>This website is run by the Department for Education. We want as many people as possible to be able to use this website.</p>
         <p>
@@ -31,26 +31,33 @@
             We’ve also made the website text as simple as possible to understand.
         </p>
         <p>
-            AbilityNet has advice on making your device easier to use if you have a disability.
+            <a rel="noreferrer noopener" target="_blank" href="https://mcmw.abilitynet.org.uk/">AbilityNet (opens in a new tab)</a> has advice on making your device easier to use if you have a disability.
         </p>
         <h2 class="govuk-heading-m">How accessible this website is</h2>
         <p>
-            We suspect that some part of this website may not be accessible.
+            We know some parts of this website are not fully accessible. For example:
         </p>
+
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-4">
+            <li>conditionally revealed questions are not always announced by screenreaders</li>
+            <li>some tables do not have row headings</li>
+            <li>some form elements do not have visible labels</li>
+        </ul>
+
         <h2 class="govuk-heading-3">Feedback and contact information</h2>
         <p>
-            If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, email:<a href="mailto:connect-family-support.service@education.gov.uk" data-testid="mailto-connect-family-link" class="govuk-link"> connect-family-support.service@education.gov.uk.</a>
+            If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, email: <a href="mailto:manage-family-support.service@education.gov.uk" data-testid="mailto-connect-family-link" class="govuk-link">manage-family-support.service.gov.uk.</a>
         </p>
         <p>
-            We’ll consider your request and get back to you in 14 days.
+            We'll consider your request and aim to get back to you in 5 working days.
         </p>
         <h2 class="govuk-heading-m">Reporting accessibility problems with this website</h2>
         <p>
-            We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, contact: <a href="mailto:connect-family-support.service@education.gov.uk" data-testid="mailto-connect-family-support-link" class="govuk-link"> connect-family-support.service@education.gov.uk.</a>
+            We're always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we're not meeting accessibility requirements, email the details to: <a href="mailto:manage-family-support.service.gov.uk" data-testid="mailto-connect-family-support-link" class="govuk-link"> manage-family-support.service.gov.uk.</a>
         </p>
         <h2 class="govuk-heading-m">Enforcement procedure</h2>
         <p>
-            The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, contact the Equality Advisory and Support Service (EASS).
+            The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the 'accessibility regulations'). If you're not happy with how we respond to your complaint, <a rel="noreferrer noopener" target="_blank" href="https://www.equalityadvisoryservice.com/">contact the Equality Advisory and Support Service (opens in a new tab).</a>
         </p>
         <h2 class="govuk-heading-m">Technical information about this website’s accessibility</h2>
         <p>
@@ -58,25 +65,31 @@
         </p>
         <h2 class="govuk-heading-m">Compliance status</h2>
         <p>
-            This website is not compliant with the WCAG version 2.1 AA standard.
+            This website is partially compliant with the WCAG (Web Content Accessibility Guidelines) version 2.1 AA standard, due to the following non-compliances (and/or) the following exemptions.
         </p>
         <h2 class="govuk-heading-m">Non-accessible content</h2>
         <p>
-            The content is non-accessible for the following reason: the service is still in development and not yet publicly available outside of a small targeted area.
+            The content is non-accessible for the following reason(s):
         </p>
-        <p>
-            The content is not within the scope of the accessibility regulations.
-        </p>
-        <p>
-            The service is still in development.
-        </p>
-        <h2 class="govuk-heading-m">What we’re doing to improve accessibility</h2>
-        <p>
-            We are testing the service and developing the service to be accessible at the point when it will be more widely available.
-        </p>
+
+        <ol class="govuk-list govuk-list--number">
+            <li>Conditionally revealed questions are not always announced by screenreaders and fail <a href="https://www.w3.org/WAI/WCAG21/Understanding/name-role-value.html" rel="noreferrer noopener" target="_blank">WCAG criterion 4.1.2 Name, Role, Value</a>. This is because ARIA elements are not supported for conditional reveals. However, the GOV.UK Design System team has found that conditionally revealed questions performed well in user research. You can find out more in their <a href="https://accessibility.blog.gov.uk/2021/09/21/an-update-on-the-accessibility-of-conditionally-revealed-questions/" rel="noreferrer noopener" target="_blank">update about the accessibility of conditionally revealed questions</a>.</li>
+            <li>Some tables in content do not have table row headers when needed. This means assistive technologies will not read the tables correctly. This fails <a href="https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships.html" rel="noreferrer noopener" target="_blank">WCAG 2.1 success criterion 1.3.1 Info and Relationships</a>.</li>
+            <li>Some form elements do not have visible labels. This fails WCAG 2.1 success criterion 1.3.1 Info and Relationships (Level A) and 4.1.2 Name, Role, Value (Level A).</li>
+        </ol>
+        <h2 class="govuk-heading-m">How we tested this website</h2>
+        <p>We tested all pages of the service to check they complied with WCAG 2.1 AA. We did this using the following accessibility testing tools:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>Axe</li>
+            <li>WAVE</li>
+            <li>Lighthouse</li>
+        </ul>
+        <p>Any issues identified have now been fixed or added to our list of accessibility issues to fix in as soon as possible.</p>
+        <h2 class="govuk-heading-m">What we're doing to improve accessibility</h2>
+        <p>We’ll continue to test the service for accessibility issues, and create a prioritised list of issues to resolve.</p>
+        <p>We do not propose to take conditionally revealed questions out of this website. Evidence shows that they work for users of assistive technology, despite technically failing a WCAG criterion. We do not currently consider them a barrier to accessibility.</p>
+        <p>We plan for external experts to run a full accessibility check of the website in early 2024.</p>
         <h2 class="govuk-heading-m">Preparation of this accessibility statement</h2>
-        <p>
-            This statement was prepared on 15 December 2022. It was last reviewed on 15 December 2022.
-        </p>
+        <p>This statement was prepared on 23 October 2023. Testing was carried out by our testing team.</p>
     </div>
 </div>
