--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
@@ -1,12 +1,11 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.PrivacyModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.Shared.HeaderPageModel
 @{
     ViewData["Title"] = "Privacy Notice";
 }
 
 @section Back {
-    @* todo: shouldn't appear when open page in new tab. just swap to use fh-back-link? *@
-    <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+    <a class="govuk-back-link fh-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
