fix back button wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Accessibility.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Accessibility.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Back {
-    <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+    <a class="govuk-back-link fh-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
