back button wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
@@ -5,8 +5,7 @@
 }
 
 @section Back {
-    @* todo: shouldn't appear when open page in new tab. just swap to use fh-back-link? *@
-    <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+    <a class="govuk-back-link fh-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
