--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
@@ -11,6 +11,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">@Model.Title</h1>
+        <p>@Model.SubTitle</p>
     </div>
 </div>
 
