add filters column wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -17,14 +17,67 @@
     </div>
 </div>
 
-@if (Model.Rows.Any())
-{
-    <partial name="_Dashboard" model='Model'/>
-}
-else
-{
-    <h2 class="govuk-heading-m">No results found</h2>
+<button id="open-close-filters" class="govuk-button govuk-button--secondary app-open-close-filters" data-module="govuk-button" type="button">
+    Open / close filters
+</button>
 
-    @* todo: add this content when we implement the search functionality *@
-@*     <p>Try again by changing or removing filters you applied.</p> *@
-}
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        <div class="moj-filter">
+
+            <div class="moj-filter__content">
+                <div class="moj-filter__selected">
+                    @*                     <div class="moj-filter__selected-heading">
+     *@                        <div class="moj-filter__heading-title">
+                        <h2 class="govuk-heading-m">Filter results</h2>
+                    </div>
+
+                    @* <partial name="FilterGroups/_FilterGroup" model="filterGroup" /> *@
+
+                    <div class="govuk-form-group fh-filter-group">
+                        <fieldset class="govuk-fieldset">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                Service name
+                            </legend>
+                            <label class="govuk-label govuk-visually-hidden" for="service-name">
+                                Search by service name
+                            </label>
+                            <input id="service-name" class="govuk-input govuk-input--width-20" type="text">
+                            @*                             <partial name="FilterGroups/@Model.PartialName" model="Model" /> *@
+                        </fieldset>
+                    </div>
+
+
+
+@*                     <div id="filters" class="moj-filter__options"> *@
+                        <button type="submit" class="govuk-button" data-module="govuk-button" data-prevent-double-click="true">
+                            Apply filters
+                        </button>
+
+                        @*                         <div class="moj-filter__heading-action">
+     *@                            @* <p><button type="submit" class="fh-button-link govuk-!-font-size-16" name="@IFilter.RemoveKey" value="@IFilter.RemoveAllValue">Clear filters</button></p> *@
+                        <p><button type="submit" class="fh-button-link govuk-!-font-size-16">Clear filters</button></p>
+                        @*                         </div>
+     *@@*                     </div>
+     *@
+
+
+@*                     </div>
+ *@                </div>
+            </div>
+        </div>
+    </div>
+    <div id="results" class="govuk-grid-column-two-thirds">
+        @if (Model.Rows.Any())
+        {
+            <partial name="_Dashboard" model='Model'/>
+        }
+        else
+        {
+            <h2 class="govuk-heading-m">No results found</h2>
+
+    @* todo: add this content only if a search was conducted*@
+    @*     <p>Try again by changing or removing filters you applied.</p> *@
+        }
+    </div>
+</div>
