--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -25,7 +25,7 @@
     <div class="govuk-grid-column-one-third">
         <form method="post" asp-page="/ServiceFilter/Index">
 
-        <div class="moj-filter">
+            <div class="moj-filter">
 
             <div class="moj-filter__content">
                 <div class="moj-filter__selected">
@@ -47,7 +47,7 @@
                             </label>
                             @*                             <input asp-for="ServiceNameSearch" id="service-name" class="govuk-input govuk-input--width-20" type="text">
  *@
-                                <input id="service-name" name="ServiceNameSearch" class="govuk-input govuk-input--width-20" type="text">
+                                <input id="service-name" name="serviceNameSearch" class="govuk-input govuk-input--width-20" type="text">
 
                             @*                             <partial name="FilterGroups/@Model.PartialName" model="Model" /> *@
                         </fieldset>
