filter added to locations page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
@@ -14,12 +14,21 @@
         <p>@Model.SubTitle</p>
     </div>
 </div>
-@if(Model.ResultCount > 0)
-{
-    <partial name="_Dashboard" model='Model' />
-}
-else
-{
-    <h2 class="govuk-heading-m">No results returned</h2>
-}
 
+<form method="post">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-one-third">
+            @await Html.PartialAsync("_locationsFilter", Model)
+        </div>
+        <div class="govuk-grid-column-two-thirds">
+            @if (Model.ResultCount > 0)
+            {
+                <partial name="_Dashboard" model='Model' />
+            }
+            else
+            {
+                <h2 class="govuk-heading-m">No results returned</h2>
+            }
+        </div>
+    </div>
+</form>
