--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -37,7 +37,7 @@
 
                     @* <partial name="FilterGroups/_FilterGroup" model="filterGroup" /> *@
 
-                    <div class="govuk-form-group fh-filter-group">
+                    <div class="govuk-form-group fh-filter-group app-filter-group">
                         <fieldset class="govuk-fieldset">
                             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                 Service name
