--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/_global.scss
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/_global.scss
@@ -8,3 +8,8 @@
 @import "pages/delivery-type";
 @import "pages/WhatLanguage";
 @import "pages/ManageServices";
+
+/*todo: if keep, move somewhere sensible */
+.app-filter-group {
+    @include govuk-responsive-padding(2, "bottom");
+}
