fix soring of filtered results, update no results message

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
@@ -28,6 +28,7 @@
             else
             {
                 <h2 class="govuk-heading-m">No results returned</h2>
+                <p>Try again by changing or removing filters you applied.</p>
             }
         </div>
     </div>
