--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -49,7 +49,7 @@
                         Apply filters
                     </button>
 
-                    <p><button type="submit" class="fh-button-link govuk-!-font-size-16">Clear filters</button></p>
+                        <p><button type="submit" class="fh-button-link govuk-!-font-size-16" name="clearFilter" value="true">Clear filters</button></p>
                 </div>
             </div>
         </form>
