--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/_global.scss
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/_global.scss
@@ -1,15 +1,9 @@
 ﻿//Patterns
 @import "patterns/cards";
-
-//Components
+@import "patterns/filters";
 
 //Pages
 @import "pages/InPersonWhere";
 @import "pages/delivery-type";
 @import "pages/WhatLanguage";
 @import "pages/ManageServices";
-
-/*todo: if keep, move somewhere sensible */
-.app-filter-group {
-    @include govuk-responsive-padding(2, "bottom");
-}
